--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   "dependencies": {
     "atom-package-deps": "^4.3.0"
   },
+  "devDependencies": {
+    "webfont": "^7.0.0"
+  },
+  "package-deps": [
+    "debugger"
+  ],
   "consumedServices": {
     "tool-bar": {
       "versions": {
@@ -21,8 +27,13 @@
       }
     }
   },
-  "devDependencies": {
-    "webfont": "^7.0.0"
+  "providedServices": {
+    "debugger-ui": {
+      "description": "A toolbar for debugger",
+      "versions": {
+        "0.1.0": "provideView"
+      }
+    }
   },
   "scripts": {
     "prepublish": "webfont -d resources/fonts -s styles -t css -f debug-icons -p 'atom://debugger-toolbar/resources/fonts/' resources/debug-icons/*.svg"
