--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "atom-package-deps": "^4.3.0"
   },
   "devDependencies": {
+    "eslint": "^3.10.2",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
     "webfont": "^7.0.0"
   },
   "package-deps": [
